@@ -1015,6 +1015,9 @@ Release 0.19.0 - Unreleased
     HADOOP-4358. No need to truncate access time in INode. Also fixes NPE 
     in CreateEditsLog. (Raghu Angadi) 
 
+    HADOOP-4387. TestHDFSFileSystemContract fails on windows nightly builds.
+    (Raghu Angadi)
+
 Release 0.18.2 - Unreleased
 
   BUG FIXES
